--- a/frontend/k8s-controller-frontend/src/styles/metrics.css
+++ b/frontend/k8s-controller-frontend/src/styles/metrics.css
@@ -1,6 +1,27 @@
-component-metrics-dashboard-container{
-    background-color: #2f2f2f;
-    width: 100vw;
-    height: auto;
-    display: flex;
+.component-metrics-dashboard-container {
+  background-color: #2f2f2f;
+  width: 100vw;
+  height: auto;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.component-metrics-dashboard-title {
+  font-size: 2rem;
+  margin: 2rem;
+}
+
+.component-metrics-dashboard-metrics-table {
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #e0e0e0;
+}
+
+.component-metrics-dashboard-metrics-table td {
+  border: 1px solid #e0e0e0;
+  border-collapse: collapse;
 }
