style: :fire: Improved stylesheets

--- a/frontend/k8s-controller-frontend/src/styles/metrics.css
+++ b/frontend/k8s-controller-frontend/src/styles/metrics.css
@@ -16,6 +16,7 @@
 }
 
 .component-metrics-dashboard-metrics-table {
+  font-family: monospace;
   width: 100%;
   height: auto;
   justify-content: center;
