--- a/frontend/k8s-controller-frontend/src/styles/namespaces.css
+++ b/frontend/k8s-controller-frontend/src/styles/namespaces.css
@@ -16,6 +16,7 @@
 }
 
 .component-namespaces-dashboard-table {
+  font-family: monospace;
   width: 100%;
   height: auto;
   justify-content: center;
