--- a/frontend/k8s-controller-frontend/src/styles/services.css
+++ b/frontend/k8s-controller-frontend/src/styles/services.css
@@ -16,6 +16,7 @@
 }
 
 .component-services-dashboard-table {
+  font-family: monospace;
   width: 100%;
   height: auto;
   justify-content: center;
